# ide

./: Cargo.toml  Readme.md  build.rs  flake.nix
src/: lib.rs  main.rs  project.rs  protocol.rs  ui.rs
src/protocol/: mod.rs  streams.rs
src/protocol/protos/: idep.proto
src/protocol/streams/: bidir.rs
src/protos/: idep.proto
src/ui/: mod.rs  stdio.rs  stdout.rs
src/ui/gtk/: mod.rs
src/ui/gtk/grid_cell/: grid_cell.ui  imp.rs  mod.rs
tests/: protocol_test.rs
