[package]
name = "ide"
version = "0.3.0"
edition = "2021"
authors = [ "Yury Shvedov <mestofel13@gmail.com>" ]

[dependencies]
gtk4 = { version = "0.7.2", features = [ "v4_10" ] }
paste = { }
protobuf = { }
tokio = { features = [ "full" ] }
byteorder = { }

[build-dependencies]
protobuf-codegen = { }
